--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Git Website</title>
   </head>
   <body>
-    <h1>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia,
-      expedita rerum! Repellat dignissimos iste reiciendis blanditiis, a in quos
-      voluptas, assumenda sit exercitationem doloremque provident veniam
-      molestiae harum nobis cum?
-    </h1>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error magnam
+      consectetur mollitia possimus, autem sint tempora maxime atque aliquid
+      nobis sequi natus quis quasi eaque, velit expedita accusamus consequuntur
+      aspernatur.
+    </p>
   </body>
 </html>
