--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       nobis sequi natus quis quasi eaque, velit expedita accusamus consequuntur
       aspernatur.
     </p>
+    <ul>
+      <li>Home</li>
+      <li>About us</li>
+      <li>Contact us</li>
+    </ul>
   </body>
 </html>
